[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-document-parser"
version = "0.1.0"
description = "A document parser built with LangChain"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Pulkit Dhingra", email = "your.email@example.com" }
]
keywords = ["langchain", "document-parser", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "ruff>=0.14.4",
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
    "pytest-cov>=7.0.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/Pulkit12dhingra/langchain-document-parser"
Repository = "https://github.com/Pulkit12dhingra/langchain-document-parser"
Issues = "https://github.com/Pulkit12dhingra/langchain-document-parser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_document_parser"]

[tool.ruff]
extend-exclude = ["*.ipynb"]
